fix: 🐛 fix simulator fonts

--- a/packages/styles/src/includes/desktop/fonts.pcss
+++ b/packages/styles/src/includes/desktop/fonts.pcss
@@ -1,22 +1,19 @@
 @font-face {
   font-family: 'Roboto';
   font-weight: 300;
-  src: local('Roboto'), local('Roboto-Light'),
-    url(assets/fonts/Roboto-Light.ttf) format('truetype');
+  src: url(assets/fonts/Roboto-Light.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto';
-  font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'),
-    url(assets/fonts/Roboto-Regular.ttf) format('truetype');
+  font-weight: normal;
+  src: url(assets/fonts/Roboto-Regular.ttf) format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto';
-  font-weight: 700;
-  src: local('Roboto'), local('Roboto-Bold'),
-    url(assets/fonts/Roboto-Bold.ttf) format('truetype');
+  font-weight: bold;
+  src: url(assets/fonts/Roboto-Bold.ttf) format('truetype');
 }
 
 @font-face {
@@ -27,8 +24,7 @@
 
 @font-face {
   font-family: 'Sharon Sans';
-  font-weight: 400;
-  font-style: normal;
+  font-weight: normal;
   src: url(assets/fonts/SharonSans-Regular.otf) format('opentype');
 }
 
@@ -48,6 +44,5 @@
 @font-face {
   font-family: 'Sharon Sans';
   font-weight: 700;
-  font-style: bold;
   src: url(assets/fonts/SharonSans-Bold.otf) format('opentype');
 }
