--- a/packages/styles/src/includes/base.pcss
+++ b/packages/styles/src/includes/base.pcss
@@ -11,7 +11,7 @@
 html {
   height: 100%;
   font-size: $default-font-size;
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: Roboto, Arial, sans-serif;
 }
 
 body {
