--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -12,7 +12,7 @@
   on:submit="_onSubmit()"
   on:submitValid="_onSubmitValid()"
   on:submitInvalid="_onSubmitInvalid()"
-  {keyboardOptions}
+  keyboardOptions={{...keyboardOptions, inputPattern: virtualKeyboardPattern}}
 />
 
 <script>
@@ -28,6 +28,7 @@
       return {
         value: 0,
         prefix: 'R$ ',
+        virtualKeyboardPattern: /^R\$\s?[\d.]+(,\d*)?$/,
         suffix: '',
         limit: CURRENCY.LIMIT,
         validation: undefined,
