refactor: 💡 make money input only accept numbers, and lock with desired format

--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -7,6 +7,7 @@
   on:keyup
   on:input
   on:blur
+  alphanumeric={false}
   on:focus="_onFocus(event)"
   on:keydown="_onKeydown(event)"
   on:submit="_onSubmit()"
@@ -19,6 +20,24 @@
   import { KEYBOARD, CURRENCY } from '@mamba/core';
   import Keyboard from '@mamba/keyboard/api/keyboard.js';
   import { format as formatMoney } from '@mamba/utils/money.js';
+
+  function getFormattedValue({ prefix, suffix, value = '0', limit }) {
+    const parsedMoney = parseFloat(value) / 100;
+    const isValidNumber = !Number.isNaN(parsedMoney);
+    const returnFactory = (money = 0) => {
+      return `${prefix}${formatMoney(money)}${suffix}`;
+    };
+
+    if (parsedMoney > limit) {
+      const limitedMoney = parseFloat(parsedMoney.toString().substr(0, String(limit).length));
+
+      return returnFactory(limitedMoney);
+    }
+
+    if (isValidNumber) return returnFactory(parsedMoney);
+
+    return returnFactory();
+  }
 
   export default {
     components: {
@@ -40,21 +59,7 @@
       _inputProps: ({ value, prefix, suffix, mask, placeholder, type, validation, ...props }) =>
         props,
       formatted: ({ prefix, suffix, value = '0', limit }) => {
-        const parsedMoney = parseFloat(value) / 100;
-        const isValidNumber = !Number.isNaN(parsedMoney);
-        const returnFactory = (money = 0) => {
-          return `${prefix}${formatMoney(money)}${suffix}`;
-        };
-
-        if (parsedMoney > limit) {
-          const limitedMoney = parseFloat(parsedMoney.toString().substr(0, String(limit).length));
-
-          return returnFactory(limitedMoney);
-        }
-
-        if (isValidNumber) return returnFactory(parsedMoney);
-
-        return returnFactory();
+        return getFormattedValue({ prefix, suffix, value, limit });
       },
       rawValue: ({ value }) => value,
     },
@@ -169,11 +174,22 @@
           if (!value.length) {
             value = '0';
           }
+        } else if (!isNumeric) {
+          e.stopPropagation();
+          e.stopImmediatePropagation();
+          const { prefix, suffix, limit } = this.get();
+          // For reset to original value, since key is not a number, since
+          // svelte not trigger the formatted computed property if its params not change.
+          const resetFormattedValue = getFormattedValue({ prefix, suffix, value, limit });
+          // SetTimeout is need, because virtual keyboard apply input value before we reach here;
+          // we can see a dirty blink of input value change, but hopefully this is an edge scenario.
+          setTimeout(() => this.refs.amountInput.set({ value: resetFormattedValue }));
         }
 
         value = parseFloat(value);
 
         this.set({ value });
+
         this.refs.amountInput._onInput(e);
       },
     },
