--- a/packages/pos/simulator/view/pos/panels/POS.html
+++ b/packages/pos/simulator/view/pos/panels/POS.html
@@ -60,6 +60,8 @@
     },
     oncreate() {
       this.updateCapabilities();
+
+      console.log('hasTouch', window.$System.hasTouch());
     },
     methods: {
       setPosModel(model) {
