fix: 🐛 accept a range of font weight for simulator

--- a/packages/styles/src/includes/desktop/fonts.pcss
+++ b/packages/styles/src/includes/desktop/fonts.pcss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Roboto';
-  font-weight: 300;
+  font-weight: 100 300;
   src: url(assets/fonts/Roboto-Light.ttf) format('truetype');
 }
 
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  font-weight: bold;
+  font-weight: 700 900;
   src: url(assets/fonts/Roboto-Bold.ttf) format('truetype');
 }
 
