--- a/packages/components/Keyboard/Keyboard.html
+++ b/packages/components/Keyboard/Keyboard.html
@@ -54,7 +54,9 @@
       if (debug) {
         console.log(`<Keyboard> keyboardOptions changed`, current);
       }
-
+      /**
+       * 2.x.x - Usage with direct prop instead keyboardOptions. Ex: <Keyboard keyboardType={KeyboardType.Math} />
+       */
       let { renderCondition = true } = current;
       if (typeof renderCondition !== 'boolean' && !!keyboard) {
         const options = keyboard.getOptions();
