feat[Dialog]: added handler response after select option

--- a/packages/components/Dialog/Confirmation.html
+++ b/packages/components/Dialog/Confirmation.html
@@ -19,13 +19,13 @@
             <button
               class="action negative"
               style={_negativeLabelStyle}
-              on:click="close('negative')"
+              on:click="close('negative', 'touch')"
               shortcut="close"
             >
               {negativeLabel}
             </button>
           {:else}
-            <div class="action" on:click="close('negative')" shortcut="close">
+            <div class="action" on:click="close('negative', 'touch')" shortcut="close">
               <RoundIcon
                 symbol="close"
                 size="giant"
@@ -41,13 +41,13 @@
             <button
               class="action positive"
               style={_positiveLabelStyle}
-              on:click="close('positive')"
+              on:click="close('positive', 'touch')"
               shortcut="enter"
             >
               {positiveLabel}
             </button>
           {:else}
-            <div class="action" on:click="close('positive')" shortcut="enter">
+            <div class="action" on:click="close('positive', 'touch')" shortcut="enter">
               <RoundIcon
                 symbol="check"
                 size="giant"
@@ -64,17 +64,12 @@
 </Dialog>
 
 <script>
-  import { KEYBOARD } from '@mamba/core';
   import { green500, red400 } from '@mamba/styles/colors';
 
   export default {
     components: {
       RoundIcon: '@mamba/icon/Round.html',
       Dialog: './Dialog.html',
-    },
-    helpers: {
-      green500,
-      red400,
     },
     data() {
       return {
@@ -84,9 +79,15 @@
         primaryColor: green500,
       };
     },
+    helpers: {
+      green500,
+      red400,
+    },
     computed: {
-      _dialogProps: ({ positiveLabel, negativeLabel, primaryColor, ...props }) => props,
-      _hasLabel: ({ negativeLabel, positiveLabel }) => !!(negativeLabel && positiveLabel),
+      _dialogProps: ({ positiveLabel, negativeLabel, primaryColor, ...props }) =>
+        props,
+      _hasLabel: ({ negativeLabel, positiveLabel }) =>
+        !!(negativeLabel && positiveLabel),
       _positiveLabelStyle: ({ _hasLabel, primaryColor }) => {
         if (!_hasLabel || !primaryColor) {
           return;
@@ -104,31 +105,34 @@
     },
     methods: {
       keyHandler(e) {
-        if (!this.get().isOpen) return;
+        if(!this.get().isOpen) return;
 
-        const keyCode = e.code && e.code !== 0 ? e.code : e.charCode || e.which || e.keyCode;
-
-        const isClose = keyCode === KEYBOARD.KEY_CODES.CLOSE;
-        const isEnter = keyCode === KEYBOARD.KEY_CODES.ENTER;
+        const { key } = e;
+        const isClose = key === 'close';
+        const isEnter = key === 'enter';
 
         if (isClose || isEnter) {
           if (__DEV__ || __DEBUG_LVL__ >= 1) {
-            console.log(`[@mamba/dialog/Confirmation.html] !! stopping propagation of key.`);
+            console.log(
+              `[@mamba/dialog/Confirmation.html] !! stopping propagation of key "${key}"`,
+            );
           }
           e.stopImmediatePropagation();
           e.preventDefault();
 
-          if (isEnter) this.close('positive');
-          if (isClose) this.close('negative');
+          if(isEnter) this.close('positive', 'keyboard');
+          if(isClose) this.close('negative', 'keyboard');
         }
       },
       open(duration) {
         return this.refs.dialog.open(duration);
       },
-      close(event) {
+      close(event, handler) {
         return this.refs.dialog.close().then(() => {
           if (event) {
-            this.fire(event);
+            this.fire(event,{
+              handler
+            });
           }
         });
       },
