fix: outdated code

--- a/packages/components/Dialog/Confirmation.html
+++ b/packages/components/Dialog/Confirmation.html
@@ -64,12 +64,17 @@
 </Dialog>
 
 <script>
+  import { KEYBOARD } from '@mamba/core';
   import { green500, red400 } from '@mamba/styles/colors';
 
   export default {
     components: {
       RoundIcon: '@mamba/icon/Round.html',
       Dialog: './Dialog.html',
+    },
+    helpers: {
+      green500,
+      red400,
     },
     data() {
       return {
@@ -79,15 +84,9 @@
         primaryColor: green500,
       };
     },
-    helpers: {
-      green500,
-      red400,
-    },
     computed: {
-      _dialogProps: ({ positiveLabel, negativeLabel, primaryColor, ...props }) =>
-        props,
-      _hasLabel: ({ negativeLabel, positiveLabel }) =>
-        !!(negativeLabel && positiveLabel),
+      _dialogProps: ({ positiveLabel, negativeLabel, primaryColor, ...props }) => props,
+      _hasLabel: ({ negativeLabel, positiveLabel }) => !!(negativeLabel && positiveLabel),
       _positiveLabelStyle: ({ _hasLabel, primaryColor }) => {
         if (!_hasLabel || !primaryColor) {
           return;
@@ -105,17 +104,16 @@
     },
     methods: {
       keyHandler(e) {
-        if(!this.get().isOpen) return;
+        if (!this.get().isOpen) return;
 
-        const { key } = e;
-        const isClose = key === 'close';
-        const isEnter = key === 'enter';
+        const keyCode = e.code && e.code !== 0 ? e.code : e.charCode || e.which || e.keyCode;
+
+        const isClose = keyCode === KEYBOARD.KEY_CODES.CLOSE;
+        const isEnter = keyCode === KEYBOARD.KEY_CODES.ENTER;
 
         if (isClose || isEnter) {
           if (__DEV__ || __DEBUG_LVL__ >= 1) {
-            console.log(
-              `[@mamba/dialog/Confirmation.html] !! stopping propagation of key "${key}"`,
-            );
+            console.log(`[@mamba/dialog/Confirmation.html] !! stopping propagation of key.`);
           }
           e.stopImmediatePropagation();
           e.preventDefault();
