fix: 🐛 do not reset keyboard props on initial routes

--- a/packages/components/Keyboard/Keyboard.html
+++ b/packages/components/Keyboard/Keyboard.html
@@ -26,11 +26,13 @@
       };
     },
     oncreate() {
-      this.root.on('router:change', () => {
+      this.root.on('router:change', (context = {}) => {
         try {
           if (!(document.activeElement instanceof HTMLInputElement) && keyboard) {
-            keyboard.resetOptions();
             keyboard.unmount();
+            if (context.init) return;
+            if (context.path.length === 1) return;
+            keyboard.resetOptions();
           }
         } catch (_) {
           //
