--- a/packages/components/Sprite/Loading.html
+++ b/packages/components/Sprite/Loading.html
@@ -1,15 +1,18 @@
-
-<Sprite {src} width="70px" ref:sprite/>
+<Sprite {src} {width} {height} FPS="8" timing="700" ref:sprite/>
 
 <script>
-  import loadingSprite from './assets/loading-rebrand.png';
+  import genericLoadingSprite from './assets/loading-generic-sprite.png';
 
   export default {
     components: {
       Sprite: './Sprite.html',
     },
-    helpers: {
-      src: loadingSprite,
+    data() {
+      return {
+        src: genericLoadingSprite,
+        width: 90,
+        height: 90,
+      };
     },
     methods: {
       start() {
