refactor: rename Gif package to Image

--- a/packages/components/Image/Image.html
+++ b/packages/components/Image/Image.html
@@ -1,13 +1,5 @@
-<div
-  ref:gif
-  class="gif"
->
-  <img
-    {src}
-    {width}
-    height="{imgHeight}"
-    alt=""
-  >
+<div ref:image class="image">
+  <img {src} {width} height="{imgHeight}" alt="">
 </div>
 
 <script>
@@ -26,7 +18,7 @@
 </script>
 
 <style>
-  .gif {
+  .image {
     display: inline-block;
   }
 </style>
