--- a/packages/components/Image/Image.html
+++ b/packages/components/Image/Image.html
@@ -1,5 +1,5 @@
-<div ref:image class="image">
-  <img {src} {width} height="{imgHeight}" alt="">
+<div style="width: {width}px; height: {imgHeight}px">
+  <img {src} alt="">
 </div>
 
 <script>
@@ -18,7 +18,14 @@
 </script>
 
 <style>
-  .image {
-    display: inline-block;
+  div {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
   }
 </style>
