--- a/packages/org/components/Image.html
+++ b/packages/org/components/Image.html
@@ -1,31 +1,14 @@
-<div style="width: {width}px; height: {imgHeight}px">
-  <img {src} alt="">
-</div>
+<img src="{path}/{fileName}" alt="missing '{fileName}'">
 
 <script>
   export default {
     data() {
       return {
-        src: null,
-        width: 0,
-        height: 0,
+        fileName: null,
       };
     },
     computed: {
-      imgHeight: ({ width, height }) => height || width,
+      path: () => window.Org.getCustomizationFolderPath(),
     },
 };
 </script>
-
-<style>
-  div {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-</style>
