--- a/packages/org/components/Image.html
+++ b/packages/org/components/Image.html
@@ -1,4 +1,8 @@
-<img class="{className}" src="{path}/{fileName}" alt="missing '{fileName}'">
+{#if checkImageExists("{path}/{fileName}")}
+<img class="{className}" src="{path}/{fileName}" alt="" />
+{:else}
+  <p>Imagem {fileName} não encontrada</p>
+{/if}
 
 <script>
   export default {
@@ -12,6 +16,21 @@
           './assets/org',
         className: '',
       };
+    },
+    methods: {
+      checkImageExists({ imageUrl }) {
+        const img = new Image();
+
+        img.onload = () => {
+          this.imageExists = true;
+        };
+
+        img.onerror = () => {
+          this.imageExists = false;
+        };
+
+        img.src = imageUrl;
+      },
     },
 };
 </script>
