--- a/packages/org/components/Image.html
+++ b/packages/org/components/Image.html
@@ -1,4 +1,4 @@
-<img class="{className}" src="{path}/{fileName}" onerror="this.src='{defImgPath}/{fileName}';" />
+<img class="{className}" src="{path}/{fileName}" onerror="this.src='{defImgPath}/{fileName}';" alt="" />
 
 <script>
   const defaultImagePath = './assets/org';
