fix: 🐛 update cached flatlist->parent component when list changes

--- a/packages/components/Flatlist/components/parent.html
+++ b/packages/components/Flatlist/components/parent.html
@@ -85,13 +85,14 @@
         return decorator;
       },
     },
-    oncreate() {
-      this.fire('create');
-    },
     onupdate({ changed, current }) {
       if (changed.isActive && current.isActive) {
         const { element } = this.refs;
         if (element) element.focus();
+      }
+
+      if (changed.key || changed.sectionIndex) {
+        this.fire('create');
       }
     },
   };
